// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Recharge/> Detail should render a detail view 1`] = `
<div
  class="full-width"
>
  <div
    class="page-header pageHeader"
  >
    <nav
      aria-label="breadcrumb"
      class=""
    >
      <ol
        class="breadcrumb"
      >
        <li
          class="breadcrumb-item"
        >
          <a
            href="/app/settings/integrations"
          >
            All apps
          </a>
        </li>
        <li
          aria-current="page"
          class="active breadcrumb-item"
        >
          Recharge
        </li>
      </ol>
    </nav>
  </div>
  <nav
    class="navbar navbar"
  >
    <a
      class="link"
      href="/app/settings/integrations/recharge/"
    >
      App Details
    </a>
    <a
      class="link"
      href="/app/settings/integrations/recharge/connections"
    >
      Connections
    </a>
  </nav>
  <header
    class="hero"
  >
    <img
      alt="Recharge's logo"
      class="heroImage"
      src="/assets/img/integrations/recharge.svg"
    />
    <div>
      <h1
        class="heroHeading"
      >
        Recharge
      </h1>
      <p
        class="heroDescription"
      >
        Display subscription info. Refund charges & skip monthly payments.
      </p>
      <div
        class="heroMeta"
      >
        <div
          class="ui-badge-badge-0cf8 badge ui-badge-uppercase-0cf8"
          data-name="badge"
          style="border-radius: 100px;"
        >
          SUBSCRIPTIONS
        </div>
        <span
          class="by"
        >
          by
           
          <a
            href="https://www.gorgias.com/"
            rel="noopener noreferrer"
            target="_blank"
          >
            Gorgias
          </a>
        </span>
      </div>
    </div>
  </header>
  <main
    class="main"
  >
    <section>
      <div
        class="longDescription"
      >
        <h2>
          About
        </h2>
        <div>
          <p>
            Recharge connects the world through seamless payments and empowers thousands of merchants to grow their subscription business. Connect Gorgias and Recharge for a simple way to manage customer subscriptions and customer service from one convenient location. 
          </p>
          <p>
            <strong>
              With this integration, you’ll be able to: 
            </strong>
          </p>
          <ul
            role="list"
          >
            <li>
              Display Recharge subscriptions next to support tickets in Gorgias, to gather full customer context before replying to questions
            </li>
            <li>
              Cancel subscriptions, re-activate subscriptions, or refund a charge (either partially or totally) right from the Gorgias helpdesk
            </li>
            <li>
              Embed Recharge data in your Macro replies to automate the most common support questions
            </li>
          </ul>
        </div>
      </div>
      <ul
        class="screenshotList"
      >
        <li
          class="screenshotListItem"
        >
          <img
            alt="Screenshot number 1 of things this products allows you to do in Gorgias"
            class="screenshot"
            src="/assets/img/integrations/screenshots/recharge-1.jpeg"
          />
        </li>
        <li
          class="screenshotListItem"
        >
          <img
            alt="Screenshot number 2 of things this products allows you to do in Gorgias"
            class="screenshot"
            src="/assets/img/integrations/screenshots/recharge-2.jpeg"
          />
        </li>
      </ul>
    </section>
    <div
      class="infoCard card"
    >
      <div
        class="card-body"
      >
        <div
          class="actionWrapper"
        >
          <a
            class="connectButtonWrapper"
            href="/app/settings/integrations/recharge/new"
          >
            <button
              aria-disabled="false"
              class="ui-button-wrapper-a432 ui-button-md-a432 ui-button-primary-a432"
              data-name="button"
              data-rac=""
              data-react-aria-pressable="true"
              id="react-aria-:r0:"
              tabindex="0"
              type="button"
            >
              <div
                class="ui-button-surface-a432"
              >
                <span
                  class="ui-button-content-a432"
                >
                  <span
                    class="typography-bold-md ui-text-text-d239"
                    data-name="text"
                    style="text-align: left; text-wrap: nowrap;"
                  >
                    <strong>
                      Connect 
                      recharge
                    </strong>
                  </span>
                </span>
              </div>
            </button>
          </a>
        </div>
        <h2
          class="categoryTitle cardTitle"
        >
          Pricing
        </h2>
        <ul
          class="cardList"
        >
          <li>
            Starting at 1% + 10¢ per transaction. Get started for free
          </li>
          <li>
            <a
              class="actionLink"
              href="https://rechargepayments.com/products/"
              rel="noopener noreferrer"
              target="_blank"
            >
              <i
                class="material-icons-outlined actionIcon actionIconBigger"
              >
                attach_money
              </i>
              See pricing details
            </a>
          </li>
        </ul>
        <h2
          class="categoryTitle cardTitle"
        >
          Resources
        </h2>
        <ul
          class="cardList"
        >
          <li>
            <a
              class="actionLink"
              href="https://docs.gorgias.com/subscription-integrations/recharge"
              rel="noopener noreferrer"
              target="_blank"
            >
              <i
                class="material-icons-outlined actionIcon actionIconBigger"
              >
                description
              </i>
              Documentation
            </a>
          </li>
          <li>
            <a
              class="actionLink"
              href="https://rechargepayments.com/privacy-policy/"
              rel="noopener noreferrer"
              target="_blank"
            >
              <i
                class="material-icons-outlined actionIcon actionIconBigger"
              >
                privacy_tip
              </i>
              Privacy Policy
            </a>
          </li>
        </ul>
      </div>
    </div>
  </main>
</div>
`;

exports[`<Recharge/> Integration should render 1`] = `
<div
  class="full-width"
>
  <div
    class="page-header pageHeader"
  >
    <nav
      aria-label="breadcrumb"
      class=""
    >
      <ol
        class="breadcrumb"
      >
        <li
          class="breadcrumb-item"
        >
          <a
            href="/app/settings/integrations"
          >
            All apps
          </a>
        </li>
        <li
          class="breadcrumb-item"
        >
          <a
            href="/app/settings/integrations/recharge/connections"
          >
            Recharge
          </a>
        </li>
        <li
          aria-current="page"
          class="active breadcrumb-item"
        />
      </ol>
    </nav>
  </div>
  <div
    class="pageContainer container-fluid"
  >
    <div
      class="row"
    >
      <div
        class="col-md-8"
      >
        <label
          class="mb-2"
          for="disabled-store-field"
        >
          Store name
        </label>
        <span
          class="mb-4 wrapper group horizontal"
        >
          <div
            class="wrapper left isDisabled isNested"
          >
            <input
              class="input"
              data-resizable="false"
              disabled=""
              id="disabled-store-field"
              name="store-name"
              type="text"
              value=""
            />
          </div>
          <span
            class="groupAddon right isDisabled"
          >
            .myshopify.com
          </span>
        </span>
        <div>
          <button
            aria-disabled="false"
            class="ui-button-wrapper-cef1 float-right ui-button-fill-cef1 ui-button-destructive-cef1"
            id="confirm-button-delete"
            type="button"
          >
            <i
              aria-hidden="true"
              class="material-icons ui-buttonicon-icon-e486 ui-buttonicon-medium-e486"
            >
              delete
            </i>
            <span
              class="ui-button-content-cef1"
            >
              Delete App
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Recharge/> Integration should render shopify integrations list 1`] = `
<div
  class="full-width"
>
  <div
    class="page-header pageHeader"
  >
    <nav
      aria-label="breadcrumb"
      class=""
    >
      <ol
        class="breadcrumb"
      >
        <li
          class="breadcrumb-item"
        >
          <a
            href="/app/settings/integrations"
          >
            All apps
          </a>
        </li>
        <li
          class="breadcrumb-item"
        >
          <a
            href="/app/settings/integrations/recharge/connections"
          >
            Recharge
          </a>
        </li>
        <li
          aria-current="page"
          class="active breadcrumb-item"
        >
          Connect app
        </li>
      </ol>
    </nav>
  </div>
  <div
    class="pageContainer container-fluid"
  >
    <div
      class="row"
    >
      <div
        class="col-md-8"
      >
        <div>
          <label
            class="control-label"
          >
            Select an existing Shopify integration
          </label>
          <button
            aria-disabled="false"
            class="ui-button-wrapper-cef1 installButton mb-2 ui-button-fill-cef1 ui-button-secondary-cef1"
            type="button"
          >
            <span
              class="ui-button-content-cef1"
            >
              <img
                alt="shopify logo"
                class="shopifyLogo"
                src="/assets/img/integrations/shopify.png"
              />
              Install Recharge for
               
              myShop2
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Recharge/> List should render 1`] = `
<div
  class="full-width"
>
  <div
    class="page-header pageHeader"
  >
    <nav
      aria-label="breadcrumb"
      class=""
    >
      <ol
        class="breadcrumb"
      >
        <li
          class="breadcrumb-item"
        >
          <a
            href="/app/settings/integrations"
          >
            All apps
          </a>
        </li>
        <li
          aria-current="page"
          class="active breadcrumb-item"
        >
          Recharge
        </li>
      </ol>
    </nav>
    <div>
      <a
        class="connectButtonWrapper"
        href="/app/settings/integrations/recharge/new"
      >
        <button
          aria-disabled="false"
          class="ui-button-wrapper-a432 ui-button-md-a432 ui-button-primary-a432"
          data-name="button"
          data-rac=""
          data-react-aria-pressable="true"
          id="react-aria-:r6:"
          tabindex="0"
          type="button"
        >
          <div
            class="ui-button-surface-a432"
          >
            <span
              class="ui-button-content-a432"
            >
              <span
                class="typography-bold-md ui-text-text-d239"
                data-name="text"
                style="text-align: left; text-wrap: nowrap;"
              >
                <strong>
                  Connect 
                  recharge
                </strong>
              </span>
            </span>
          </div>
        </button>
      </a>
    </div>
  </div>
  <nav
    class="navbar navbar"
  >
    <a
      class="link"
      href="/app/settings/integrations/recharge/"
    >
      App Details
    </a>
    <a
      class="link"
      href="/app/settings/integrations/recharge/connections"
    >
      Connections
    </a>
  </nav>
  <ul
    class="list"
  >
    <li
      class="listItem"
    >
      <a
        class="link"
        href="/app/settings/integrations/recharge/1"
      >
        <span>
          myShop1
        </span>
        <i
          class="material-icons md-3"
        >
          keyboard_arrow_right
        </i>
      </a>
    </li>
  </ul>
</div>
`;
